--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <header>
-        <!-- <img src="images/matceleste.png" alt="Matlletus Logo"> -->
-        <img src="images/bluematlogo.jpeg" alt="">
+        <img src="images/matceleste.png" alt="Matlletus Logo">
+        <!-- <img src="images/bluematlogo.jpeg" alt=""> -->
         <h1>Matlletus</h1>
         <nav>
             <ul>
