--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <img src="images/matceleste.png" alt="Matlletus Logo">
+        <img src="images/mkt.png" alt="Matlletus Logo">
         <!-- <img src="images/bluematlogo.jpeg" alt=""> -->
         <h1>Matlletus</h1>
         <nav>
@@ -28,6 +28,7 @@
         <p>👥</p>
     </header>
     <main>
+        <img src="images/matbackg.jpeg" alt="Development">
         <!-- <h1>Welcome to Matlletus</h1> -->
         <section class="home section">
             <p>Home</p>
